                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 29-01-2005 fixed: 1080i aspect ratio in ComboRenderer
  - 29-01-2005 added: Pictures auto-rotate using EXIF information
  - 29-01-2005 fixed: Zoom in pictures should pause slideshow till unzoomed
  - 29-01-2005 added: Video database update code
  - 29-01-2005 added: Video settings are saved per-file to the video database.
  - 29-01-2005 added: [ 1111870 ] Blue Screen of Death (which isn't blue), thanks to Fulg
  - 29-01-2005 fixed: textsubtitles were being rendered in sourceresolution instead of outputresolution causing larg(er) subs and >2 lines on low(er) resolution videos.
  - 29-01-2005 fixed: vobsubs were being clipped instead of scaled unless displayresolution matched the vobsubresolution and no overscan was set. (only with mplayer pre6)
  - 29-01-2005 fixed: subtitle files with uppercase extension were not loaded
  - 28-01-2005 fixed: attempting to change audio track locks up xbmc.
  - 28-01-2005 added: [ 1102392 ] XLink, support for multiple games dirs (Thanks to scampa123)
                      Use a ; to separate them (example: f:\games;g:\games)
  - 26-01-2005 changed: free a little more memory when leaving kai window
  - 26-01-2005 fixed: my programs, last focused control is not remembered
  - 26-01-2005 changed: Merged audio/video/dvd cachesize settings for harddisk to 1 setting.
               Added cachesize setting for unknown types on the internet (url's without a known audio or video extension).
               Allow cache sizes of 0.
  - 26-01-2005 fixed: ID3 tags with UTF16 fields show strange characters
  - 26-01-2005 updated: Polish language file (Thnx to napek)